# chromashell

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
Formula/: chromashell.rb
demo/: aurora.tape  autumn.tape  fire.tape  fireflies.tape  galaxy.tape  lightning.tape  matrix.tape  metaballs.tape  ocean.tape  plasma.tape  rain.tape  retro.tape  snow.tape
src/: color.rs  main.rs  pty.rs  renderer.rs  screen.rs  terminal.rs
src/effects/: aurora.rs  autumn.rs  fire.rs  fireflies.rs  lightning.rs  matrix.rs  metaballs.rs  mod.rs  ocean.rs  plasma.rs  rain.rs  retro.rs  snow.rs  starfield.rs
