[package]
name = "chromashell"
version = "0.1.0"
edition = "2021"
description = "Live shader effects for your terminal — wraps your shell with visual overlays"
license = "MIT"
repository = "https://github.com/leoditto/chromashell"
keywords = ["terminal", "shader", "visual-effects", "tui", "shell"]
categories = ["command-line-utilities", "rendering", "visualization"]

[[bin]]
name = "chromashell"
path = "src/main.rs"

[[bin]]
name = "cs"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
clap_lex = "=0.6.0"
crossterm = "=0.27.0"
libc = "0.2.186"
nix = { version = "0.31.3", features = ["process", "signal", "poll", "term"] }
rand = "=0.8.5"

[profile.release]
opt-level = 3
lto = true
strip = true
